--- a/KerguiWebPage/src/styles.scss
+++ b/KerguiWebPage/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-.nom {
-    color: green;
+*{
+  margin: 0;
+  padding: 0;
 }
