ajout de la partie de yacine

--- a/KerguiWebPage/src/app/search-bar/search-bar.component.scss
+++ b/KerguiWebPage/src/app/search-bar/search-bar.component.scss
@@ -2,8 +2,9 @@
 nav{
   background-color: #173B61;
   height: 60px;
-  margin-left: 320px;
+  margin-left: 1.4rem;
   position:sticky;
+  width: calc(100vw - 245px);
 }
 
 input{
@@ -21,7 +22,7 @@ i{
 }
 .search-button{
   color: #173B61;
-  margin-left: -20px;
+  margin-left: -30px;
 }
 .form-element2{
   margin-left: 1100px;
