--- a/KerguiWebPage/src/app/sidebar/sidebar.component.html
+++ b/KerguiWebPage/src/app/sidebar/sidebar.component.html
@@ -40,7 +40,7 @@
         </div>
         <div class="deconnexion"> 
             <i class="fa-solid fa-right-from-bracket"></i>
-            Déconnexion
+            <a routerLink="/connexion">Déconnexion</a>
         </div>
     </div>
 </body>
