--- a/KerguiWebPage/src/app/sidebar/sidebar.component.scss
+++ b/KerguiWebPage/src/app/sidebar/sidebar.component.scss
@@ -65,6 +65,12 @@ body{
     padding-top: 10px;
     padding-left: 20px;
     box-shadow: 0px 0px 2px 0px rgba(#828181,0.5);
+
+    a{
+        text-decoration: none;
+        color: #173b61;
+        padding-left: 5px;
+    }
 }
 
 .titlee{
