--- a/KerguiWebPage/src/app/mdp-oublie/mdp-oublie.component.scss
+++ b/KerguiWebPage/src/app/mdp-oublie/mdp-oublie.component.scss
@@ -13,8 +13,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
-    max-width: 100vw;
+    max-height: 100%;
+    max-width: 100%;
     margin-top: 150px;
     margin-bottom: 6rem;
 
