--- a/KerguiWebPage/src/app/connexion/connexion.component.html
+++ b/KerguiWebPage/src/app/connexion/connexion.component.html
@@ -1,3 +1,5 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 
 <body>
     <div class="connexion">
@@ -8,20 +10,20 @@
         </div>
         <div class="droite">
             <img [src]="logoPath" alt="logo" class="logo">
-            <h2>{{ title }}</h2>
+            <h2 class="text-center">{{ title }}</h2>
     
             <form action="" class="formulaire">
-                <div class="input-container">
+                <div class="input-container text-center">
                     <input type="email" id="email" class="champ" placeholder=" "/>
                     <label for="email">Email</label>
                 </div>
-                <div class="input-container">
+                <div class="input-container text-center">
                     <input type="password" id="password" class="champ" placeholder=" " />
                     <label for="password">Mot de passe</label>
                 </div>
             </form>
             <a routerLink= "/mdp_oublie" class="lien_mdp_oublie">Mot de passe oublié ?</a>
-            <button>
+            <button class="text-center mt-4 mt-xxl-5">
                 <a routerLink="/pieces" class="bouton">Se connecter</a>
             </button>
             <p class="inscription">
