--- a/KerguiWebPage/src/app/inscription/inscription.component.html
+++ b/KerguiWebPage/src/app/inscription/inscription.component.html
@@ -1,3 +1,4 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
 <body>
@@ -9,26 +10,26 @@
         </div>
         <div class="droite">
             <img [src]="logoPath" alt="logo" class="logo">
-            <h2>{{ title }}</h2>
+            <h2 class="text-center mb-3 mt-2">{{ title }}</h2>
     
             <form action="">
-                <div class="input-container">
+                <div class="input-container text-center">
                     <input type="email" id="email" class="champ" placeholder=" "/>
                     <label for="email">Email</label>
                 </div>
-                <div class="input-container">
+                <div class="input-container text-center">
                     <input type="password" id="password" class="champ" placeholder=" " />
                     <label for="password">Mot de passe</label>
                 </div>
-                <div class="input-container">
+                <div class="input-container text-center">
                     <input type="password" id="password" class="champ" placeholder=" " />
                     <label for="password">Confirmer mot de passe</label>
                 </div>
             </form>
-            <button>
+            <button class="text-center mt-4 mt-xxl-5">
                 <a routerLink="/connexion" class="bouton">S'inscrire</a>
             </button>
-            <p class="connexion">
+            <p class="connexion mt-4 mt-xxl-5">
                 <span>Vous avez déjà un compte ? </span>
                 <a routerLink="/connexion" class="lien-connexion">Connectez-vous</a>
               </p>
