--- a/KerguiWebPage/src/app/inscription/inscription.component.scss
+++ b/KerguiWebPage/src/app/inscription/inscription.component.scss
@@ -57,13 +57,12 @@
         justify-content: center;
     
         .logo {
-          width: 300px;
+          width: 12vw;
         }
     
         h2 {
           font-size: 40px;
           color: #173B61;
-          margin-bottom: 2rem;
           font-weight: bold;
         }
     
@@ -109,6 +108,7 @@
               position: absolute;
               top: 50%;
               left: 1rem;
+              margin-left: 10px;
               transform: translateY(-50%);
               font-size: 1rem;
               color: #8da0b9;
@@ -119,7 +119,6 @@
         }
   
         button{
-          margin-top: 2.5rem;
           background-color:#173B61;
           height: 50px;
           width: 180px;
@@ -137,10 +136,8 @@
   
         .connexion{
           font-size: 14px;
-          margin-top: 10%;
           color: #173B61;
           font-weight: bold;
-          margin-top: 2rem;
   
           .lien-connexion{
               color: #B2CCFF;
