--- a/KerguiWebPage/src/app/reset-password/reset-password.component.html
+++ b/KerguiWebPage/src/app/reset-password/reset-password.component.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <button>
-          <a routerLink="/connexion" class="btn-confirm">Confirmer</a>
+          <a routerLink="/password_reset" class="btn-confirm">Confirmer</a>
         </button>
     </div>
     
