--- a/KerguiWebPage/src/app/search-bar/search-bar.component.html
+++ b/KerguiWebPage/src/app/search-bar/search-bar.component.html
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="overflow-hidden me-0">
 
-      <form class="d-flex" role="search">
+      <form class="" role="search">
 
-        <div class="container-form">
-          <div class="form-element1">
-            <input class="form-control me-2" aria-label="Search">
-            <a href=""><i class="fa-solid fa-magnifying-glass search-button"></i></a>
+        <div class="d-flex justify-content-between align-items-center pt-3 px-5">
+          <div class="form-element1 d-flex">
+            <input class="form-control" aria-label="Search">
+            <a href="#"><i class="fa-solid fa-magnifying-glass search-button mt-2"></i></a>
           </div>
 
           <div class="form-element2">
-            <a href=""> <i class="fa-regular fa-bell element1"></i></a>
-            <a href=""><i class="fa-regular fa-circle element2"></i></a>
+            <a href="#"> <i class="fa-regular fa-bell element1"></i></a>
+            <a href="#"><i class="fa-regular fa-circle element2"></i></a>
           </div>
 
         </div>
