--- a/KerguiWebPage/src/app/search-bar/search-bar.component.scss
+++ b/KerguiWebPage/src/app/search-bar/search-bar.component.scss
@@ -2,17 +2,17 @@
 nav{
   background-color: #173B61;
   height: 60px;
-  margin-left: 1.4rem;
-  position:sticky;
-  width: calc(100vw - 245px);
+  // margin-left: 1.4rem;
+  // position:sticky;
+  max-width: calc(100vw - 245px);
 }
 
 input{
   width: 350px;
   height: 30px;
   border-radius: 10px;
-  margin-top: 13px;
-  margin-left: 40px;
+  // margin-top: 13px;
+  // margin-left: 40px;
   border: 2px solid white;
   padding-left: 10px;
 }
@@ -23,10 +23,6 @@ i{
 .search-button{
   color: #173B61;
   margin-left: -30px;
-}
-.form-element2{
-  margin-left: 1100px;
-  margin-top: -28px;
 }
 .element2{
   margin-left: 10px;
