Ajout de la page accueil

--- a/KerguiWebPage/src/app/connexion/connexion.component.html
+++ b/KerguiWebPage/src/app/connexion/connexion.component.html
@@ -22,7 +22,7 @@
             </form>
             <a routerLink= "/mdp_oublie" class="lien_mdp_oublie">Mot de passe oublié ?</a>
             <button>
-                <a routerLink="/pieces" class="bouton">Se connecter</a>
+                <a routerLink="/accueil" class="bouton">Se connecter</a>
             </button>
             <p class="inscription">
                 <span>Pas de compte ? </span>
