--- a/KerguiWebPage/src/app/sidebar/sidebar.component.html
+++ b/KerguiWebPage/src/app/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
             </div>
             <div class="pieces common">
                 <i class="fa-solid fa-couch"></i>
-                Pièces
+                <a href="" routerLink="/pieces" style="text-decoration: none; color: inherit;">Pièces</a>
             </div>
         </div>
         <div class="deconnexion"> 
