--- a/KerguiWebPage/src/app/connexion/connexion.component.scss
+++ b/KerguiWebPage/src/app/connexion/connexion.component.scss
@@ -6,11 +6,13 @@
 }
 
 body{
-  max-height: 100vh;
-  max-width: 100vw;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  // box-sizing: border-box;
+
 }
 .connexion {
     width: 100vw;
