--- a/KerguiWebPage/src/app/inscription/inscription.component.scss
+++ b/KerguiWebPage/src/app/inscription/inscription.component.scss
@@ -8,11 +8,11 @@
   }
   
   body{
-  max-height: 100vh;
-  max-width: 100vw;
+  max-height: 100%;
+  max-width: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  // overflow: hidden;
   }
     
   .inscription {
