ajout du graphique

--- a/KerguiWebPage/src/app/accueil/accueil.component.scss
+++ b/KerguiWebPage/src/app/accueil/accueil.component.scss
@@ -83,7 +83,7 @@
     
 }
 .consommation, .coutenergie{
-    background-color: #091f5b;
+    background-color: #3d3488;
     color: white;
     height: 8rem;
     width: 10rem;
@@ -105,9 +105,8 @@
 }
 
 .graphique{
-    height: 382px;
+    height: 500px;
     width:100%;
-    background-color: #f35b04;
 }
 .piecess{
     height: 248px;
