--- a/KerguiWebPage/src/app/accueil/accueil.component.html
+++ b/KerguiWebPage/src/app/accueil/accueil.component.html
@@ -49,7 +49,9 @@
                 </div>
             </div>
         </div>
-        <div class="graphique"></div>
+        <div class="graphique">
+            <app-graphique></app-graphique>
+        </div>
         <div class="piecess ">
             <div class="piecetitle">
                 Pièces
