--- a/KerguiWebPage/src/app/sidebar/sidebar.component.html
+++ b/KerguiWebPage/src/app/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
         <div class="thesidebar">
             <div class="accueil common">
                 <i class="fa-solid fa-house"></i>
-                Accueil
+               <a href="" routerLink="/accueil" style="color: inherit; text-decoration: none;">  &nbsp; Accueil</a>
             </div>
             <div class="appareil common" routerLink="/appareils">
                 <i class="fa-solid fa-house-laptop"></i>
@@ -35,7 +35,7 @@
             </div>
             <div class="pieces common" routerLink="/pieces">
                 <i class="fa-solid fa-couch"></i>
-                <a href="" routerLink="/pieces" style="text-decoration: none; color: inherit;">Pièces</a>
+                <a href="" routerLink="/pieces" style="text-decoration: none; color: inherit;">  &nbsp; Pièces</a>
             </div>
         </div>
         <div class="deconnexion"> 
