--- a/KerguiWebPage/src/app/sidebar/sidebar.component.html
+++ b/KerguiWebPage/src/app/sidebar/sidebar.component.html
@@ -23,15 +23,15 @@
             </div>
             <div class="appareil common" routerLink="/appareils">
                 <i class="fa-solid fa-house-laptop"></i>
-                Appareils
+                &nbsp;Appareils
             </div>
             <div class="historique common">
                 <i class="fa-solid fa-chart-area"></i>
-                Historique
+                &nbsp;Historique
             </div>
             <div class="notif common">
                 <i class="fa-solid fa-bell"></i>
-                Notifications
+                &nbsp;Notifications
             </div>
             <div class="pieces common" routerLink="/pieces">
                 <i class="fa-solid fa-couch"></i>
