--- a/KerguiWebPage/src/app/accueil/accueil.component.html
+++ b/KerguiWebPage/src/app/accueil/accueil.component.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="graphique">
+        <div class="graphique mb-3">
             <app-graphique></app-graphique>
         </div>
         <div class="piecess ">
