MAJ package.json, app,routes

--- a/KerguiWebPage/src/app/sidebar/sidebar.component.html
+++ b/KerguiWebPage/src/app/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
             </div>
             <div class="historique common">
                 <i class="fa-solid fa-chart-area"></i>
-                &nbsp;Historique
+               <a href="" routerLink="/historique" style="text-decoration: none; color: inherit;"> &nbsp;Historique</a>
             </div>
             <div class="notif common">
                 <i class="fa-solid fa-bell"></i>
