Organisation des pages dans avec navbar et sidebar dans le component nommé interieur

--- a/KerguiWebPage/src/app/connexion/connexion.component.html
+++ b/KerguiWebPage/src/app/connexion/connexion.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="droite">
             <img [src]="logoPath" alt="logo" class="logo">
-            <h2 class="text-center">{{ title }}</h2>
+            <h2 class="text-center mb-3">{{ title }}</h2>
     
             <form action="" class="formulaire">
                 <div class="input-container text-center">
@@ -22,9 +22,9 @@
                     <label for="password">Mot de passe</label>
                 </div>
             </form>
-            <a routerLink= "/mdp_oublie" class="lien_mdp_oublie">Mot de passe oublié ?</a>
-            <button>
-                <a routerLink="/accueil" class="bouton">Se connecter</a>
+            <a routerLink= "/mdp_oublie" class="lien_mdp_oublie mt-3">Mot de passe oublié ?</a>
+            <button class="mt-4">
+                <a routerLink="/keurgui" class="bouton">Se connecter</a>
  
             </button>
             <p class="inscription">
