--- a/KerguiWebPage/src/app/splash-screen/splash-screen.component.scss
+++ b/KerguiWebPage/src/app/splash-screen/splash-screen.component.scss
@@ -4,6 +4,7 @@ body{
         flex-direction: column;
         align-items: center; 
         justify-content:space-around;
+        margin-top: 5rem;
         .logo{
             img{
                 width: 90%;
@@ -14,7 +15,8 @@ body{
             font-family: sans-serif;
             font-size: 40px;
             font-weight: bolder;
-            margin-bottom: 50px;
+            margin-top: 2rem;
+            margin-bottom: 4rem;
         }
         button{
             width: 180px;
