ajout des pages notifications, historique-cons et compte

--- a/KerguiWebPage/src/app/interieur/accueil/accueil.component.html
+++ b/KerguiWebPage/src/app/interieur/accueil/accueil.component.html
@@ -4,7 +4,7 @@
             <div class="maison">
                 <span class="votremaison">Votre maison,</span>
                 <img src="./assets/maison.jpg" alt="photo de votre maison" width="228px" height="132px">
-            <div class="info"> 
+            <div class="info">
                 <div class="adresse"> Patte d'Oie Builders,</div>
                 <div class="surface"> 150m²</div>
                 <div class="circlee"></div>
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="conso__" style="background-color: red">
-
+    <div class="conso__">
+      <app-historique-cons></app-historique-cons>
     </div>
 </div>
