--- a/KerguiWebPage/src/app/interieur/sidebar/sidebar.component.html
+++ b/KerguiWebPage/src/app/interieur/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="rectanglewhite">
-        <span class="titlee" > 
+        <span class="titlee" >
             <img src="assets/logonobg.png" alt="logo_app" width="50px" height="50px">
            <span class="secondtitle">eurgui Energy</span>
         </span>
@@ -29,7 +29,7 @@
                 <i class="fa-solid fa-chart-area"></i>
                 Historique
             </div>
-            <div class="notif common">
+            <div class="notif common" routerLink="/notifications">
                 <i class="fa-solid fa-bell"></i>
                 Notifications
             </div>
@@ -38,7 +38,7 @@
                 <a href="" routerLink="/pieces" style="text-decoration: none; color: inherit;"> Pièces</a>
             </div>
         </div>
-        <div class="deconnexion"> 
+        <div class="deconnexion">
             <i class="fa-solid fa-right-from-bracket"></i>
             <a routerLink="">Déconnexion</a>
         </div>
