Réglage des pages pour responsive mais forgotMdp ne marche pas

--- a/KerguiWebPage/src/app/app.component.html
+++ b/KerguiWebPage/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-<!-- <app-search-bar></app-search-bar>
-<app-sidebar></app-sidebar> -->
+<!-- <app-search-bar></app-search-bar> -->
+<!-- <app-compte></app-compte> -->
 <!-- <router-outlet/> -->
 <router-outlet/>
