--- a/KerguiWebPage/src/app/interieur/accueil/accueil.component.scss
+++ b/KerguiWebPage/src/app/interieur/accueil/accueil.component.scss
@@ -1,4 +1,6 @@
-
+*{
+    font-family: sans-serif
+}
 .thehome{
 
     height: 90vh;
@@ -19,10 +21,10 @@
 .maison, .journalier{
     // position: relative;
     height:15rem;
+    width: 27vw;
 }
 .maison{
-   margin:auto;
-    width: 20rem;
+    margin:auto;
     display: flex;
     flex-direction: column;
     color: #091f5b;
@@ -32,8 +34,8 @@
     img{
         border-radius: 10px ;
         margin: auto;
-        height: 132px;
-        width: 228px;
+        height: 20vh;
+        width: 20vw;
 
     }
     .votremaison{
@@ -71,7 +73,6 @@
 }
 .journalier{
     margin: auto;
-    width: 20rem;
     display: flex;
     flex-direction: column;
     color: #091f5b;
@@ -93,8 +94,8 @@
 .consommation, .coutenergie{
     background-color: #3d3488;
     color: white;
-    height: 8rem;
-    width: 9rem;
+    height: 20vh;
+    width: 12vw;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -140,7 +141,8 @@
 // }
 
 .conso__{
-    width: 300px;
+    width: 25vw;
+    margin-top: 1rem;
 }
 .center_bas{
     display: flex;
