--- a/KerguiWebPage/src/app/interieur/historique/historique.component.html
+++ b/KerguiWebPage/src/app/interieur/historique/historique.component.html
@@ -12,10 +12,10 @@
             </div>
         </div>
     </div>
-    <div class="consommationcout my-4 ms-5">
+    <div class="consommationcout my-4 ms-5 pt-xxl-3">
         <div class="consommation">
             <div class="appmensuel">
-                <span class="vosappareils ps-4 pe-xxl-5">Vos appareils
+                <span class="vosappareils ps-4 pe-xxl-5"><a [routerLink]="['/keurgui', 'appareils']" style="text-decoration: none; color: #173b61; margin-right: 0.5rem;">Vos appareils</a>
                     <i class="fa-solid fa-circle-arrow-right"></i>
                 </span>
                 <span class="mensuel ps-5 ms-3">mensuel
@@ -43,7 +43,7 @@
         </div>
         <div class="cout mx-5">
             <div class="apphebdomadaire">
-                <span class="vosappareils ps-4 pe-xxl-5">Vos appareils
+                <span class="vosappareils ps-4 pe-xxl-5"><a [routerLink]="['/keurgui', 'appareils']" style="text-decoration: none; color: #173b61; margin-right: 0.5rem;">Vos appareils</a>
                     <i class="fa-solid fa-circle-arrow-right"></i>
                 </span>
                 <span class="hebdomadaire ms-4 ps-5">hebdomadaire 
