--- a/KerguiWebPage/src/app/interieur/sidebar/sidebar.component.html
+++ b/KerguiWebPage/src/app/interieur/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
                 <i class="fa-solid fa-chart-area"></i>
                 Historique
             </div>
-            <div class="notif common" routerLink="/notifications">
+            <div class="notif common" routerLink="/notifications" routerLinkActive="active__">
                 <i class="fa-solid fa-bell"></i>
                 Notifications
             </div>
