--- a/KerguiWebPage/src/app/interieur/appareil/appar/appar.component.html
+++ b/KerguiWebPage/src/app/interieur/appareil/appar/appar.component.html
@@ -1,13 +1,29 @@
-<div class="d-flex flex-column div_1 mx-4 my-2 px-3 pb-2 rounded-3">
     <div class="d-flex justify-content-center"><img [src]="appareil.imgUrl" alt="" width="" height="150"></div>
     <div class="d-flex justify-content-between">
         <div class="text-center fw-bold">
             <div>{{appareil.nom_appareil}}</div>
             <div>({{appareil.nom_piece}})</div>
         </div>
-        <div class="text-center">
-            <div>Icone</div>
-            <div>ic-ic</div>
+        <div class="text-center pb-1">
+            <div>
+                <a href="#" *ngIf="appareil.state">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" fill="#173B61" class="bi bi-toggle-on" viewBox="0 0 16 16">
+                        <path d="M5 3a5 5 0 0 0 0 10h6a5 5 0 0 0 0-10zm6 9a4 4 0 1 1 0-8 4 4 0 0 1 0 8"/>
+                      </svg>
+                </a>
+                <a href="#" *ngIf="!appareil.state">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" fill="#173B61" class="bi bi-toggle-off" viewBox="0 0 16 16">
+                        <path d="M11 4a4 4 0 0 1 0 8H8a5 5 0 0 0 2-4 5 5 0 0 0-2-4zm-6 8a4 4 0 1 1 0-8 4 4 0 0 1 0 8M0 8a5 5 0 0 0 5 5h6a5 5 0 0 0 0-10H5a5 5 0 0 0-5 5"/>
+                      </svg>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#173B61" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                      </svg>
+                </a>
+            </div>
         </div>
     </div>    
-</div>
+
