--- a/KerguiWebPage/src/app/interieur/appareil/appareil.component.scss
+++ b/KerguiWebPage/src/app/interieur/appareil/appareil.component.scss
@@ -1,4 +1,3 @@
-
 .cadre_app{
     flex: 5;
     max-height: 100vh;
@@ -7,7 +6,19 @@
         overflow-y: auto;
     }
 }
-
+.hcons{
+    margin-top: 1rem;
+}
 div::-webkit-scrollbar{
     display: none;
+}
+.div_1{
+    width: 24vw;
+    box-shadow: 0px 1px 2px gray;
+}
+.div_1:hover{
+    background-color: #d0e3ff3a !important;
+}
+.selectedapp{
+    background-color: #D0E3FF !important;
 }
