--- a/KerguiWebPage/src/app/interieur/deviceautomation/deviceautomation.component.scss
+++ b/KerguiWebPage/src/app/interieur/deviceautomation/deviceautomation.component.scss
@@ -11,7 +11,7 @@
     padding-right: 20px !important;
     font-size: 12px;
     margin-top: 30px;
-    gap: 35px;
+    // gap: 10px;
     
     img{
         margin: auto;
