--- a/KerguiWebPage/src/app/interieur/pieces/pieces.component.scss
+++ b/KerguiWebPage/src/app/interieur/pieces/pieces.component.scss
@@ -10,7 +10,7 @@
             font-weight: bold;
             margin-left: 2rem;
         }
-
+ 
         .card1{
             display: flex;
             max-height: 60%;
@@ -179,14 +179,14 @@
     }
 
     .historique{
-      margin-right: 2rem;
-        width: 500px;
+        // margin-right: 2rem;
+        width: 25vw;
         /*background-color: black;*/
         margin-top: 1rem;
     }
 
     .historiquePiece{
-        width: 300px;
+        width: 23vw;
 
         h2{
             font-size: 28px;
@@ -194,8 +194,8 @@
         }
         img{
             margin-top: 1rem;
-            width: 297px;
-            height: 150px;
+            width: 23vw;
+            height: 23vh;
             box-shadow: 0px 0px 3px 3px rgba(0.1, 0.1, 0.1, 0.1);
             border-radius: 10px;
         }
@@ -206,7 +206,6 @@
                 box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
                 border-radius: 10px;
                 margin: 0.5rem;
-
                 .type_cons{
                     display: flex;
 
@@ -260,6 +259,7 @@
 }
 // }
 .consos > div{
+    height: 15vh;
     color: #173B61;
     border-radius: 10px;
     box-shadow: 0px 2px 2px gray;
