Mise en place de l'environnement front pour inscription en deux étapes

--- a/KerguiWebPage/src/app/connexion/connexion.component.html
+++ b/KerguiWebPage/src/app/connexion/connexion.component.html
@@ -2,7 +2,7 @@
 
 
 <body>
-    <div class="connexion">
+    <div class="connexion" @superSmoothSlide>
         <div class="gauche">
             <img [src]="imgPath" alt="maison" class="maison">
             <h2>Avec KeurGui Energy,</h2>
